bdr.BDR.scala.error
Erreur de compilation :
BDR:6: error: ';' expected but 'else' found.
      else if (litMessage=="L")
      ^BDR:8: error: ';' expected but 'else' found.
      else if (litMessage=="I")
      ^BDR:10: error: ';' expected but 'else' found.
      else if (litMessage=="A")
      ^BDR:12: error: ';' expected but 'else' found.
      else if (litMessage=="B")
      ^BDR:14: error: ';' expected but 'else' found.
      else if (litMessage=="C")
      ^BDR:16: error: ';' expected but 'else' found.
      else if (litMessage=="Z")
      ^BDR:18: error: ';' expected but 'else' found.
      else if (litMessage=="Y")
      ^BDR:20: error: ';' expected but 'else' found.
      else if (litMessage=="X")
      ^